신현재 오류고쳐줌

--- a/dispatch/templates/dispatch/driverhome.html
+++ b/dispatch/templates/dispatch/driverhome.html
@@ -98,7 +98,7 @@
         <tr>
           <td colspan="2">
             <input type="file" id="fileInput" style="display: none;" onchange="displayFileName()" />
-            <div id="fileName">파일이 업로드되지 않았습니다.</div>
+            <div id="fileName">사진이 업로드되지 않았습니다.</div>
           </td>
           <td>
             <input class="inputImgbtn" type="button" value="사진 업로드" onclick="triggerFileUpload()" />
