--- a/static/css/dispatch/schedule.css
+++ b/static/css/dispatch/schedule.css
@@ -369,6 +369,7 @@
     width: 100%;
     height: 4.8rem;
     box-sizing: border-box;
+    padding: 0px 30px;
 }
 
 .PopupunderBtnBox{
@@ -383,7 +384,7 @@
 }
 
 .btnModules{
-    background-color: blue;
+    background-color: #0069D9;
 }
 
 .timeline {
@@ -426,5 +427,72 @@
     cursor: pointer;
     box-sizing: border-box;
     outline: none;
-    background-color: blue;
+    background-color: #0069D9;
+}
+
+.popupAreaModules2{
+    display: none;
+}
+
+.popupTable2 td{
+    border-bottom: 0.1rem solid #CDCDCE;
+    padding: 0.6rem;
+}
+
+.popupTable2 td:nth-child(1){
+    width: 10%;
+}
+.popupTable2 td:nth-child(2){
+    width: 40%;
+}
+.popupTable2 td:nth-child(3),
+.popupTable2 td:nth-child(4){
+    width: 25%;
+}
+
+.shcedulePopupTableHeader2{
+    width: 100%;
+    height: 3.6rem;
+    border: 0.1rem solid #CDCDCE;
+    border-radius: 0.5rem 0.5rem 0 0;
+    box-sizing: border-box;
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: #7A7A7A;
+    border-spacing: 0;
+    text-align: center;
+}
+
+.shcedulePopupTableBody2{
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 1.4rem;
+    border-spacing: 0;
+    text-align: center;
+}
+
+.PopupBtnBox2 {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    width: 100%;
+    height: 4.8rem;
+    box-sizing: border-box;
+}
+
+.editbtnModules{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 6rem;
+    height: 2.5rem;
+    padding: 0 1.2rem;
+    border: none;
+    border-radius: 0.2rem;
+    font-size: 1.4rem;
+    color: white;
+    cursor: pointer;
+    box-sizing: border-box;
+    outline: none;
+    background-color: #0069D9;
 }
