--- a/dispatch/templates/dispatch/schedule.html
+++ b/dispatch/templates/dispatch/schedule.html
@@ -203,9 +203,7 @@
                 </div>
             </div>
             <div class="shcedulePopupTableBox"> 
-                <div class="PopupBtnBox2">
-                    <div class="editbtnModules">수정</div>
-                </div>
+
                 <table class="shcedulePopupTableHeader2 popupTable2">
                     <thead>
                         <tr>
@@ -223,7 +221,7 @@
                             <td>1.</td>
                             <td>운행 전</td>
                             <td class="statusCell">완료</td>
-                            <td class="timeCell">07:10</td>
+                            <td class="timeCell"><input type="time" class="timeInput"/></td>
                         </tr>
                         </tbody>
                     </table>
