--- a/notice/templates/notice/personnel_committee_rule.html
+++ b/notice/templates/notice/personnel_committee_rule.html
@@ -4,7 +4,8 @@
 
 {% block head %}
 <meta http-equiv="Cache-Control" content="private, no-cache, no-store, max-age=0, must-revalidate">
-<link rel="stylesheet" href="{% static 'css/notice/rule.css' %}" type="text/css" />
+<link rel="stylesheet" href="{% static 'css/dispatch/dispatchBase.css' %}" type="text/css" />
+<link rel="stylesheet" href="{% static 'css/rules/rules.css' %}" type="text/css" />
 {% endblock %}
 
 {% block content-header %}
@@ -192,5 +193,5 @@
 {% endblock %}
 
 {% block script %}
-<script src="{% static 'js/notice/rule.js' %}"></script>
+<script src="{% static 'js/rules/rules.js' %}"></script>
 {% endblock %}
