--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,11 @@
                   <a href="#" class="sideMenuNav2Link">수칙관리</a>
                   <ul class="submenu">
                     <li>
+                      <a href="{% url 'notice:allowance_rule' %}" class="sideMenuNav3Link">
+                        <div class="sideMenuNav3Menu">수당수칙</div>
+                      </a>
+                    </li>
+                    <li>
                       <a href="{% url 'notice:personnel_committee_rule' %}" class="sideMenuNav3Link">
                         <div class="sideMenuNav3Menu">교통사고처리수칙</div>
                       </a>
